# ArbIt

./: .gitignore  README.md  pyproject.toml
.planning/: BRIEF.md  ROADMAP.md
algorithm/: db.py  models.py  pipeline.py  run_full_pipeline.py  run_phase2_only.py  run_phase3_phase4.py
algorithm/Phase_2/: __init__ 2.py  candidate_finder.py  collection 2.py  embedder 2.py  mongo_adapter 2.py  persistence 2.py  pipeline.py
algorithm/Phase_3/: README.md  __init__.py  adapters.py  arb_filter.py  classifier.py  config.py  contradictions.py  engine.py  extractor.py  graph_builder.py  llm_judge.py  mapping.py  models.py  reranker.py  utils.py
algorithm/Phase_4/: __init__.py  adapters.py  config.py  engine.py  kelly.py  models.py  regression.py  spread.py
algorithm/Phase_5/: __init__.py  correlation.py  liquidity.py  models.py  price_checker.py  validator.py
algorithm/decay/: __init__.py  config.py  models.py  snapshots.py
app/: package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css
backend/: main.py  requirements.txt
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ExecutionLog.tsx  MatchesExplorer.tsx  OpportunityCard.tsx  OpportunityFeed.tsx  Sidebar.tsx  SpreadHistory.tsx  Ticker.tsx
dashboard/lib/: mockData.ts  types.ts  useCounter.ts
simulation/: README.md  __init__.py  config.py  models.py  run_backtest.py
simulation/analytics/: charts.py  metrics.py  reports.py
simulation/data/: adapters.py  loader.py  replay_stream.py
simulation/environment/: clock.py  env.py  observation.py  state.py
simulation/execution/: baskets.py  fees.py  fill_engine.py  settlement.py  slippage.py
simulation/portfolio/: account.py  baskets.py  (+2 more)
vector_db/: pytest.ini  requirements.txt
(+79 files in other folders)
